# aptos-indexer-processor-sdk

./: .gitignore  .gitmodules  README.md
.github/: CODEOWNERS
aptos-indexer-processors-sdk/: Cargo.toml
aptos-indexer-processors-sdk/.cargo/: config.toml
aptos-indexer-processors-sdk/instrumented-channel/src/: lib.rs
aptos-indexer-processors-sdk/moving-average/src/: lib.rs
aptos-indexer-processors-sdk/postgres/: Cargo.toml  README.md
aptos-indexer-processors-sdk/postgres/src/: config.rs  lib.rs
aptos-indexer-processors-sdk/postgres/src/models/: backfill_processor_status.rs  mod.rs
aptos-indexer-processors-sdk/postgres/src/utils/: database.rs  mod.rs  postgres_trait_impls.rs
aptos-indexer-processors-sdk/sample/src/: lib.rs
aptos-indexer-processors-sdk/sdk/: CHANGELOG.md  Cargo.toml
aptos-indexer-processors-sdk/sdk-server-framework/src/: lib.rs
aptos-indexer-processors-sdk/sdk/src/: lib.rs  server_framework.rs
aptos-indexer-processors-sdk/sdk/src/builder/: mod.rs  processor_builder.rs
aptos-indexer-processors-sdk/sdk/src/common_steps/: accumulator_step.rs  arcify_step.rs  mod.rs  order_by_version_step.rs  timed_buffer_step.rs  timed_size_buffer_step.rs  transaction_stream_step.rs  version_tracker_step.rs  write_rate_limit_step.rs
aptos-indexer-processors-sdk/sdk/src/common_steps/accumulator_step/: mod.rs  pollable.rs
aptos-indexer-processors-sdk/sdk/src/config/: indexer_processor_config.rs  mod.rs  processor_mode.rs  processor_status_saver.rs
aptos-indexer-processors-sdk/sdk/src/health/: core.rs  mod.rs  progress.rs
aptos-indexer-processors-sdk/sdk/src/postgres/: README.md  mod.rs  progress.rs
aptos-indexer-processors-sdk/sdk/src/postgres/basic_processor/: README.md  basic_processor_function.rs  basic_processor_step.rs  mod.rs
aptos-indexer-processors-sdk/sdk/src/postgres/db/: diesel.toml  processor_metadata_schema.rs  schema.rs
aptos-indexer-processors-sdk/sdk/src/postgres/models/: ledger_info.rs  mod.rs  processor_status.rs
aptos-indexer-processors-sdk/sdk/src/postgres/subconfigs/: mod.rs
aptos-indexer-processors-sdk/sdk/src/postgres/utils/: checkpoint.rs  database.rs  mod.rs
aptos-indexer-processors-sdk/sdk/src/server_framework/: mod.rs
aptos-indexer-processors-sdk/sdk/src/test/: mod.rs  utils.rs
aptos-indexer-processors-sdk/sdk/src/testing_framework/: cli_parser.rs  database.rs  mock_grpc.rs  sdk_test_context.rs
aptos-indexer-processors-sdk/sdk/src/traits/: README.md  async_step.rs  mod.rs  parquet_extract_trait.rs  pollable_async_step.rs  processable.rs  processor_trait.rs  runnable_step.rs
aptos-indexer-processors-sdk/sdk/src/types/: mod.rs  transaction_context.rs
aptos-indexer-processors-sdk/sdk/src/utils/: README.md  chain_id_check.rs  constants.rs  convert.rs  errors.rs  extract.rs  mod.rs  property_map.rs  starting_version.rs  step_metrics.rs
aptos-indexer-processors-sdk/sdk/tests/: accumulator_step_tests.rs
aptos-indexer-processors-sdk/testing-framework/: Cargo.toml
aptos-indexer-processors-sdk/testing-framework/src/: cli_parser.rs  database.rs  lib.rs  mock_grpc.rs  new_test_context.rs  sdk_test_context.rs
aptos-indexer-processors-sdk/transaction-stream/: Cargo.toml
aptos-indexer-processors-sdk/transaction-stream/src/: config.rs  lib.rs  transaction_stream.rs
aptos-indexer-processors-sdk/transaction-stream/src/utils/: additional_headers.rs  mod.rs  time.rs
aptos-indexer-processors-sdk/transaction-stream/tests/: failover_test.rs  latency_failover_test.rs  stream_timeout_test.rs
examples/: Cargo.toml
examples/postgres-basic-events-example/: Cargo.toml  README.md
examples/postgres-basic-events-example/src/: events_model.rs  main.rs
examples/postgres-basic-events-example/src/db/: schema.rs
examples/postgres-example/: Cargo.toml  README.md  config.yaml  example-config.yaml
examples/postgres-example/src/: events_processor.rs  events_step.rs  main.rs
examples/postgres-example/src/db/: schema.rs
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/instrumented-channel/: Cargo.toml
rust/instrumented-channel/src/: channel_metrics.rs  lib.rs
rust/sample/: Cargo.toml
rust/sample/src/: lib.rs
rust/scripts/: rust_lint.sh
rust/sdk/: Cargo.toml  main.rs
rust/sdk-examples/: Cargo.toml  config.yaml
rust/sdk-examples/src/: lib.rs  main.rs
rust/sdk-examples/src/common_steps/: latest_processed_version_tracker.rs  mod.rs  postgres_version_tracker_step.rs
rust/sdk-examples/src/config/: config.rs  indexer_processor_config.rs  mod.rs  processor_config.rs
rust/sdk-examples/src/events_processor/: events_extractor.rs  events_models.rs  events_processor.rs  events_storer.rs  mod.rs  processor.rs
rust/sdk-examples/src/utils/: database.rs  mod.rs  starting_version.rs  util.rs
rust/sdk-metrics/: Cargo.toml
rust/sdk-metrics/src/metrics/: mod.rs  step_metrics.rs
rust/sdk-server-framework/: Cargo.toml
rust/sdk-server-framework/src/: lib.rs
rust/sdk/src/: connectors.rs  fanout.rs  lib.rs  main.rs  pipeline.rs  simple_step.rs  stream.rs  timed_buffer.rs
rust/sdk/src/builder/: builder.rs  dag.rs  mod.rs  processor_builder.rs
rust/sdk/src/common_steps/: arcify_step.rs  mod.rs  order_by_version_step.rs  timed_buffer_step.rs  transaction_stream_step.rs
rust/sdk/src/instrumentation/: async_step_context.rs  cpu_tracing.rs  logging.rs  mod.rs
rust/sdk/src/metrics/: mod.rs  step_metrics.rs  transaction_context.rs
rust/sdk/src/steps/: async_step.rs  fanout.rs  log.rs  metrics.rs  mod.rs  pollable_async_step.rs  step_metrics.rs  timed_buffer.rs  transaction_stream.rs  transaction_stream_step.rs
rust/sdk/src/test/: utils.rs
rust/sdk/src/traits/: async_step.rs  channel_connected_step.rs  instrumentation.rs  into_runnable_step.rs  mod.rs  pollable_async_step.rs  processable.rs  runnable_step.rs  version_tracker_step.rs
rust/sdk/src/types/: transaction_context.rs
rust/sdk/src/utils/: convert.rs  errors.rs  extract.rs  mod.rs  time.rs
rust/transaction-stream/: Cargo.toml
rust/transaction-stream/src/: config.rs  transaction_stream.rs
rust/transaction-stream/src/utils/: mod.rs
(+31 files in other folders)
