[workspace]
resolver = "2"

members = ["sdk", "instrumented-channel", "sdk-examples"]

[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-indexer-processors-sdk"
rust-version = "1.75"

[workspace.dependencies]
sdk = { path = "sdk" }

anyhow = "1.0.86"
aptos-indexer-transaction-stream = { git = 'https://github.com/aptos-labs/aptos-indexer-processors.git', rev = '3c8896b489062ce0510c5e4162366db753b59499' }
aptos-protos = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-node-v1.12.1" }
async-trait = "0.1.80"
delegate = "0.12.0"
futures = "0.3.30"
kanal = "0.1.0-pre8"
mockall = "0.12.1"
num_cpus = "1.16.0"
petgraph = "0.6.5"
prometheus = "0.13.4"
rayon = "1.10.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
thiserror = "1.0.61"
tracing = "0.1.34"
tokio = { version = "1.37.0", features = ["full"] }
url = { version = "2.5.1", features = ["serde"] }
