[workspace]
resolver = "2"

members = ["sdk", "instrumented-channel", "sdk-examples", "sdk-metrics"]

[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-indexer-processors-sdk"
rust-version = "1.75"

[workspace.dependencies]
instrumented-channel = { path = "instrumented-channel" }
sdk = { path = "sdk" }
sdk-server-framework = { path = 'sdk-server-framework' }
sdk-metrics = { path = "sdk-metrics" }

ahash = { version = "0.8.7", features = ["serde"] }
anyhow = "1.0.86"
aptos-indexer-transaction-stream = { git = 'https://github.com/aptos-labs/aptos-indexer-processors.git', rev = '3c8896b489062ce0510c5e4162366db753b59499' }
aptos-protos = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-node-v1.12.1" }
aptos-system-utils = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "4541add3fd29826ec57f22658ca286d2d6134b93" }
async-trait = "0.1.80"
backtrace = "0.3.58"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bigdecimal = { version = "0.4.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
delegate = "0.12.0"
derive_builder = "0.20.0"
# Do NOT enable the postgres feature here, it is conditionally enabled in a feature
# block in the Cargo.toml file for the processor crate.
# https://github.com/aptos-labs/aptos-indexer-processors/pull/325
diesel = { version = "2.1", features = [
    "chrono",
    "postgres_backend",
    "numeric",
    "serde_json",
] }
# Use the crate version once this feature gets released on crates.io:
# https://github.com/weiznich/diesel_async/commit/e165e8c96a6c540ebde2d6d7c52df5c5620a4bf1
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "d02798c67065d763154d7272dd0c09b39757d0f2", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
diesel_async_migrations = { git = "https://github.com/niroco/diesel_async_migrations", rev = "11f331b73c5cfcc894380074f748d8fda710ac12" }
field_count = "0.1.1"
futures = "0.3.30"
futures-util = "0.3.21"
hex = "0.4.3"
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
kanal = "0.1.0-pre8"
lazy_static = "1.4.0"
mockall = "0.12.1"
num_cpus = "1.16.0"
once_cell = { version = "1.19.0" }
petgraph = "0.6.5"
prometheus = "0.13.4"
prometheus-client = "0.22.2"
rayon = "1.10.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
sha2 = "0.9.3"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.61"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.34"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.7.4"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
url = { version = "2.5.1", features = ["serde"] }
warp = { version = "0.3.5", features = ["tls"] }

# Postgres SSL support
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
tokio-postgres = "0.7.10"
