[package]
name = "aptos-indexer-processor-sdk"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
aptos-indexer-transaction-stream = { workspace = true }
aptos-protos = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
instrumented-channel = { workspace = true }
kanal = { workspace = true }
mockall = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
petgraph = { workspace = true }
prometheus = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
