[package]
name = "aptos-indexer-processor-sdk"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
# Server framework feature enables the HTTP server with metrics and health check endpoints.
# This requires tokio net features for the TCP listener.
server_framework = [
    "autometrics",
    "axum",
    "backtrace",
    "clap",
    "toml",
    "tracing-subscriber",
    "tokio/net",
]
postgres_partial = [
    "diesel",
    "diesel-async",
    "diesel_migrations",
    "field_count",
    "postgres-native-tls",
    "native-tls",
    "server_framework",
    "tokio-postgres",
]
# When using the postgres_full features we enable the diesel/postgres feature. We configure
# it in a feature so the CLI can opt out, since it cannot tolerate the libpq dep.
# Recall that features should always be additive.
postgres_full = ["postgres_partial", "diesel/postgres"]
testing_framework = [
    "testcontainers",
    "tonic",
    "tokio-retry",
    "tokio-stream",
    "tokio/net",
]
default = []

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
aptos-indexer-transaction-stream = { workspace = true }
aptos-protos = { workspace = true }
aptos-transaction-filter = { workspace = true }
async-trait = { workspace = true }
autometrics = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
backtrace = { workspace = true, optional = true }
bcs = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
derive_builder = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
field_count = { workspace = true, optional = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
instrumented-channel = { workspace = true }
kanal = { workspace = true }
mockall = { workspace = true }
native-tls = { workspace = true, optional = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
petgraph = { workspace = true }
postgres-native-tls = { workspace = true, optional = true }
prometheus = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true, optional = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true, optional = true }
tokio-retry = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aptos-system-utils = { workspace = true }
