[package]
name = "aptos-indexer-testing-framework"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-indexer-processor-sdk = { workspace = true }
aptos-protos = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
# Postgres SSL support
native-tls = { workspace = true }
once_cell = { workspace = true }
postgres-native-tls = { workspace = true }

serde_json = { workspace = true }

testcontainers = { workspace = true }

tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }

