[package]
name = "instrumented-channel"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
delegate = { workspace = true }
derive_builder = { workspace = true }
kanal = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
prometheus-client = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
